# ui

./: .babelrc  .deepsource.toml  .dockerignore  .eslintignore  .eslintrc.json  .flowconfig  .gitignore  .gitmodules  .gitpod.yml  .gometalinter.json  .prettierignore  .prettierrc  .travis.yml  Credits.md  Dockerfile  Dockerfile-build  Dockerfile_deployed  LICENSE  README.md  asset-manifest.json  buildPython.js  conf.json  config-overrides.js  craco.config.js  depcruise-config-high-level.js  deploy_key.enc  docker-compose.yml  dockerBuild.ps1  dockerRun.ps1  euroHPC.py  ex8.json  fixDeploy.mjs  global.d.ts  high-level-dependencies.html  index.html  less-high-level-dependencies.html  main.go  mkdocs.yml  nginx.conf  package-lock.json  (+7 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
api/: router.go  setup.go
build_tools/: db_tools.sh  deploy.sh  release.sh  release_conf.json  release_install.sh  release_run.sh  release_test_dockerfile  test_release.sh  travis_release.sh
client/: .babelrc  .eslintrc.json  .flowconfig  package.json
conf/: nginx.conf
config/: check.go  cmd.go  docker.nginx.conf  docker.run.sh  env.go  file.go  karma.conf.js  reader.go  setup.go  structure.go  tests.webpack.js  webpack.config.js
db/: account.go  db.go  project.go  result.go  setup.go
dependency-cruiser/: .dependency-cruiser.js  depcruise-config-high-level.js  depcruise-config-low-level.js  dependency-cruiser.md  high-level-dependencies.html  low-level-dependencies.html
docs/: authentication.md  for_developers.md  index.md  pyproject.toml  using_docker.md
(+1443 files in other folders)
