[tool.poetry]
name = "docs"
version = "0.1.0"
description = "mkdocs documentation for the project"
authors = ["Leszek Grzanka <grzanka@agh.edu.pl>"]

[tool.poetry.dependencies]
python = "~3.11"
mkdocs = "~1.5.3"
mkdocs-material = "~9.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true